release/1.15.1/VERSION.md
# 1.15.1

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.15.1```   |
| Release Time   | ```2019-12-16T10:29:47+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.15```   |
| sha1   | ```58c12b1e2878e0a78719778acb803746450b3f1c```   |
| size   | ```234331```   |
| total size  | ```225984127```  |
| url       | ```https://piston-meta.mojang.com/v1/packages/58c12b1e2878e0a78719778acb803746450b3f1c/1.15.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```8b11614bea9293592a947ea8f4fd72981ea66677```   |
| size   | ```15518397```   |
| url       | ```https://piston-data.mojang.com/v1/objects/8b11614bea9293592a947ea8f4fd72981ea66677/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```4d1826eebac84847c71a77f9349cc22afd0cf0a1```   |
| size   | ```36164938```   |
| url       | ```https://piston-data.mojang.com/v1/objects/4d1826eebac84847c71a77f9349cc22afd0cf0a1/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |