release/1.15.2/VERSION.md
# 1.15.2

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.15.2```   |
| Release Time   | ```2020-01-17T10:03:52+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.15```   |
| sha1   | ```58c12b1e2878e0a78719778acb803746450b3f1c```   |
| size   | ```234331```   |
| total size  | ```225984127```  |
| url       | ```https://piston-meta.mojang.com/v1/packages/58c12b1e2878e0a78719778acb803746450b3f1c/1.15.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```e3f78cd16f9eb9a52307ed96ebec64241cc5b32d```   |
| size   | ```15531492```   |
| url       | ```https://piston-data.mojang.com/v1/objects/e3f78cd16f9eb9a52307ed96ebec64241cc5b32d/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```bb2b6b1aefcd70dfd1892149ac3a215f6c636b07```   |
| size   | ```36175593```   |
| url       | ```https://piston-data.mojang.com/v1/objects/bb2b6b1aefcd70dfd1892149ac3a215f6c636b07/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |